# cbridge

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: release.yaml  test.yaml
src/cbridge/: __init__.py  cbridge.py  cfunc.py  types.py
src/ctstruct/: __init__.py  ctstruct.py  types.py
src/dataclass_ctypes/: __init__.py
tests/: test_cfunc.py  test_cstruct.py
