[project]
name = "cbridge"
version = "0.1.0b0"
authors = [{ name = "ZhengYu, Xu", email = "zen-xu@outlook.com" }]
description = "Creating ctype structure like dataclass"
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["typing-extensions; python_version< '3.12'"]

[project.urls]
homepage = "https://github.com/zen-xu/cbridge"
repository = "https://github.com/zen-xu/cbridge.git"
issues = "https://github.com/zen-xu/cbridge/issues"

[build-system]
requires = ["uv_build>=0.8,<0.9"]
build-backend = "uv_build"

[tool.ruff]
extend-exclude = ["docs/*"]
fix = true
line-length = 88
target-version = "py39"

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ERA", # flake8-eradicate/eradicate
    "I",   # isort
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PGH", # pygrep
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["cbridge"]
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
files = "src"
explicit_package_bases = true
namespace_packages = true
show_error_codes = true
